# pyconf2025_debugging_python_application_like_a_pro

./: .gitignore  README.md  presentation.md  pyproject.toml  requirements.txt
apps/hello_django/hello/: models.py  open_api.py  views.py
apps/hello_django/hello/migrations/: 0001_tasks_table.py  0002_tasks_is_active.py  0003_remove_tasks_completed_tasks_status.py
apps/hello_django/hello/templates/: create_tasks.html  landing_page.html  task_created.html  tasks.html
apps/hello_django/hello/utility/: response.py
apps/hello_django/hello_django/: settings.py  urls.py
apps/hello_fastapi/: api.py  app.py  database.py  library.db  main.py  models.py  service.py
apps/hello_flask/: api.py  app.py  models.py  run.py  service.py
containers/: Dockerfile  Pycharm_Container.md  VSCode_Container.md  main.py  pyproject.toml  requirements.txt  run_command
pycharm/: README.md
python_pdb/: README.md  main.py  memos.db
vscode/: README.md
