[project]
name = "pyconf2025-debugging-python-application-like-a-pro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "debugpy>=1.8.12",
    "django>=5.1.6",
    "drf-yasg>=1.21.8",
    "fastapi[standard]>=0.115.8",
    "flask-restx>=1.3.0",
    "flask-sqlalchemy>=2.5.1",
    "flask==2.1.3",
    "sqlalchemy==1.4",
    "uvicorn>=0.34.0",
    "Werkzeug==2.2.2"
]
[tool.setuptools]
py-modules = []
