[tool.poetry]
name = "containers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
debugpy = "^1.8.12"
pydevd-pycharm = "^243.23654.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
